updated auth token